--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 
 services:
-  api-sentimentos:
-    container_name: api-sentimentos
-    image: api-sentimentos
+  api-consultacep:
+    container_name: consultaCep
+    image: api-consultacep
     restart: unless-stopped
     build:
       context: .
